[metadata]
name = protontricks
description = A simple wrapper for running Winetricks commands for Proton-enabled games.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Matoking/protontricks
author = Janne Pulkkinen
author_email = janne.pulkkinen@protonmail.com
license = GPL3
license_files =
    LICENSE
platforms = linux
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find_namespace:
package_dir =
    = src
include_package_data = True
install_requires =
    setuptools  # Required for pkg_resources
    vdf>=3.2
    Pillow
setup_requires =
    setuptools-scm
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
protontricks.data =
    *

[options.entry_points]
console_scripts =
    protontricks = protontricks.cli.main:cli
    protontricks-launch = protontricks.cli.launch:cli
    protontricks-desktop-install = protontricks.cli.desktop_install:cli

[options.data_files]
share/applications =
    src/protontricks/data/share/applications/protontricks.desktop
    src/protontricks/data/share/applications/protontricks-launch.desktop
